[tool.poetry]
name = "smart_control_analysis"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "smart_control_analysis" }
]

[tool.poetry.dependencies]
python = ">=3.10.12,<3.12"
smart-control = { path = "../sbsim", develop = true }

tensorflow = "2.15.1"
gymnasium = "^0.29.1"
stable-baselines3 = {version = "^2.7.1", extras = ["extra"]}

# The "dm-reverb" package is meant for Linux only, so we are conditionally
# ... installing the normal package on Linux, and another package on Mac.
# ... However there may still be issues with the Mac version.
# ... See: https://github.com/google/sbsim/issues/102 for details.
#dm-reverb = "^0.14.0"
#
dm-reverb = { version = "0.14.0", markers = "sys_platform == 'linux'" }
dm-reverb-macos = { version = "0.11.0.dev0", markers = "sys_platform == 'darwin'" }
#dm-reverb-macos-nightly = { version = ">=0.11.20241207", markers = "sys_platform == 'darwin'" }

pytz = "^2024.1"
gin-config = "^0.5.0"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
bidict = "^0.23.1"
protobuf = "3.20.3"
pint = "^0.24.3"
holidays = "^0.56"
google3 = "^1.0.0"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
mediapy = "^1.2.2"
seaborn = "^0.13.2"
tf-agents = "0.18.0"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
typing-extensions = "^4.12.2"
ipython = "^8.27.0"
importlib-resources = { version = "*", python = "<3.11" }
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyink = "^24.10.1"
pre-commit = "^4.2.0"
isort = "^6.0.1"
pylint = "^3.3.6"
pylint-per-file-ignores = "^1.4.0"
mdformat = "^0.7.22"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"
mkdocs-material = "^9.6.14"
mkdocs-autorefs = "^1.4.2"

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.1"

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]
force-exclude = '''
(
  /.*_pb2\.py
  | /BUILD$
  | /Dockerfile$
)
'''

[tool.isort]
lexicographical = true
group_by_package = true
order_by_type = false
force_sort_within_sections = true
force_single_line = true
line_length = 200
single_line_exclusions = ['typing']
known_first_party = ["smart_control"]
skip_glob = ['smart_control/proto/*']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
